--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*-------------------------------------
 
-	Template Name: Pulchritude Nail art salon and booking HTML Template
+	Template Name: Pulchritude Lydney Nails salon and booking HTML Template
 	Copyright © 2023-24 
 
 ---------------------------------------
