--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -1,6 +1,6 @@
 /*-------------------------------------
     
-	Template Name: Pulchritude Nail art salon and booking HTML Template
+	Template Name: Pulchritude Lydney Nails salon and booking HTML Template
 	Copyright © 2023-24
 	
 ---------------------------------------*/
